PPL/src/main/mt22/astgen/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "'('", "')'", "'['", 
                     "']'", "'.'", "','", "';'", "':'", "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BRK", "BOOL", "DO", "ELSE", 
                      "FALSE", "FLOAT", "FOR", "FUNC", "IF", "INT", "RTN", 
                      "STRING", "TRUE", "WHILE", "VOID", "OUT", "CONT", 
                      "OF", "INHERIT", "ARR", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "NOT", "AND", "OR", "EQ", "IEQ", "LESS", "LEQ", 
                      "GREATER", "GEQ", "CONCAT", "LC", "RC", "LS", "RS", 
                      "DOT", "COMMA", "SEMI", "COLON", "LB", "RB", "ASSN", 
                      "ACMT", "CMT", "INTNUM", "FLOATNUM", "STR", "ID", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_outfunc = 1
    RULE_stmtlist = 2
    RULE_stmt = 3
    RULE_open_stmt = 4
    RULE_closed_stmt = 5
    RULE_basic_stmt = 6
    RULE_ty_pe = 7
    RULE_atmtype = 8
    RULE_functype = 9
    RULE_idlist = 10
    RULE_arrtype = 11
    RULE_dimen = 12
    RULE_arridx = 13
    RULE_arrele = 14
    RULE_vardclr = 15
    RULE_varnoini = 16
    RULE_varini = 17
    RULE_funcdclr = 18
    RULE_funcproto = 19
    RULE_paramlist = 20
    RULE_param = 21
    RULE_funccall = 22
    RULE_arglist = 23
    RULE_explistskipable = 24
    RULE_explist = 25
    RULE_exp = 26
    RULE_exp_1 = 27
    RULE_exp_2 = 28
    RULE_exp_3 = 29
    RULE_exp_4 = 30
    RULE_exp_5 = 31
    RULE_exp_6 = 32
    RULE_exp_7 = 33
    RULE_blkstmt = 34
    RULE_assnstmt = 35
    RULE_for_openstmt = 36
    RULE_for_closedstmt = 37
    RULE_dowhstmt = 38
    RULE_brkstmt = 39
    RULE_contstmt = 40
    RULE_rtnstmt = 41
    RULE_callstmt = 42

    ruleNames =  [ "program", "outfunc", "stmtlist", "stmt", "open_stmt", 
                   "closed_stmt", "basic_stmt", "ty_pe", "atmtype", "functype", 
                   "idlist", "arrtype", "dimen", "arridx", "arrele", "vardclr", 
                   "varnoini", "varini", "funcdclr", "funcproto", "paramlist", 
                   "param", "funccall", "arglist", "explistskipable", "explist", 
                   "exp", "exp_1", "exp_2", "exp_3", "exp_4", "exp_5", "exp_6", 
                   "exp_7", "blkstmt", "assnstmt", "for_openstmt", "for_closedstmt", 
                   "dowhstmt", "brkstmt", "contstmt", "rtnstmt", "callstmt" ]

    EOF = Token.EOF
    AUTO=1
    BRK=2
    BOOL=3
    DO=4
    ELSE=5
    FALSE=6
    FLOAT=7
    FOR=8
    FUNC=9
    IF=10
    INT=11
    RTN=12
    STRING=13
    TRUE=14
    WHILE=15
    VOID=16
    OUT=17
    CONT=18
    OF=19
    INHERIT=20
    ARR=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    NOT=27
    AND=28
    OR=29
    EQ=30
    IEQ=31
    LESS=32
    LEQ=33
    GREATER=34
    GEQ=35
    CONCAT=36
    LC=37
    RC=38
    LS=39
    RS=40
    DOT=41
    COMMA=42
    SEMI=43
    COLON=44
    LB=45
    RB=46
    ASSN=47
    ACMT=48
    CMT=49
    INTNUM=50
    FLOATNUM=51
    STR=52
    ID=53
    WS=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    ERROR_CHAR=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def outfunc(self):
            return self.getTypedRuleContext(MT22Parser.OutfuncContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.outfunc()
                self.state = 87
                self.match(MT22Parser.EOF)
                pass
            elif token in [MT22Parser.EOF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.match(MT22Parser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def outfunc(self):
            return self.getTypedRuleContext(MT22Parser.OutfuncContext,0)


        def vardclr(self):
            return self.getTypedRuleContext(MT22Parser.VardclrContext,0)


        def assnstmt(self):
            return self.getTypedRuleContext(MT22Parser.AssnstmtContext,0)


        def funcdclr(self):
            return self.getTypedRuleContext(MT22Parser.FuncdclrContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_outfunc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutfunc" ):
                return visitor.visitOutfunc(self)
            else:
                return visitor.visitChildren(self)




    def outfunc(self):

        localctx = MT22Parser.OutfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_outfunc)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 92
                    self.vardclr()
                    pass

                elif la_ == 2:
                    self.state = 93
                    self.assnstmt()
                    pass

                elif la_ == 3:
                    self.state = 94
                    self.funcdclr()
                    pass


                self.state = 97
                self.outfunc()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 99
                    self.vardclr()
                    pass

                elif la_ == 2:
                    self.state = 100
                    self.assnstmt()
                    pass

                elif la_ == 3:
                    self.state = 101
                    self.funcdclr()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(MT22Parser.StmtContext,0)


        def stmtlist(self):
            return self.getTypedRuleContext(MT22Parser.StmtlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmtlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtlist" ):
                return visitor.visitStmtlist(self)
            else:
                return visitor.visitChildren(self)




    def stmtlist(self):

        localctx = MT22Parser.StmtlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmtlist)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.stmt()
                self.state = 107
                self.stmtlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def open_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Open_stmtContext,0)


        def closed_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Closed_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MT22Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.open_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.closed_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Open_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MT22Parser.IF, 0)

        def LC(self):
            return self.getToken(MT22Parser.LC, 0)

        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def RC(self):
            return self.getToken(MT22Parser.RC, 0)

        def stmt(self):
            return self.getTypedRuleContext(MT22Parser.StmtContext,0)


        def closed_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Closed_stmtContext,0)


        def ELSE(self):
            return self.getToken(MT22Parser.ELSE, 0)

        def open_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Open_stmtContext,0)


        def WHILE(self):
            return self.getToken(MT22Parser.WHILE, 0)

        def for_openstmt(self):
            return self.getTypedRuleContext(MT22Parser.For_openstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_open_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpen_stmt" ):
                return visitor.visitOpen_stmt(self)
            else:
                return visitor.visitChildren(self)




    def open_stmt(self):

        localctx = MT22Parser.Open_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_open_stmt)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(MT22Parser.IF)
                self.state = 117
                self.match(MT22Parser.LC)
                self.state = 118
                self.exp(0)
                self.state = 119
                self.match(MT22Parser.RC)
                self.state = 120
                self.stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(MT22Parser.IF)
                self.state = 123
                self.match(MT22Parser.LC)
                self.state = 124
                self.exp(0)
                self.state = 125
                self.match(MT22Parser.RC)
                self.state = 126
                self.closed_stmt()
                self.state = 127
                self.match(MT22Parser.ELSE)
                self.state = 128
                self.open_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.match(MT22Parser.WHILE)
                self.state = 131
                self.match(MT22Parser.LC)
                self.state = 132
                self.exp(0)
                self.state = 133
                self.match(MT22Parser.RC)
                self.state = 134
                self.open_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.for_openstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Closed_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basic_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Basic_stmtContext,0)


        def IF(self):
            return self.getToken(MT22Parser.IF, 0)

        def LC(self):
            return self.getToken(MT22Parser.LC, 0)

        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def RC(self):
            return self.getToken(MT22Parser.RC, 0)

        def closed_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.Closed_stmtContext)
            else:
                return self.getTypedRuleContext(MT22Parser.Closed_stmtContext,i)


        def ELSE(self):
            return self.getToken(MT22Parser.ELSE, 0)

        def WHILE(self):
            return self.getToken(MT22Parser.WHILE, 0)

        def for_closedstmt(self):
            return self.getTypedRuleContext(MT22Parser.For_closedstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_closed_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClosed_stmt" ):
                return visitor.visitClosed_stmt(self)
            else:
                return visitor.visitChildren(self)




    def closed_stmt(self):

        localctx = MT22Parser.Closed_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_closed_stmt)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BRK, MT22Parser.DO, MT22Parser.RTN, MT22Parser.CONT, MT22Parser.LB, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.basic_stmt()
                pass
            elif token in [MT22Parser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.match(MT22Parser.IF)
                self.state = 141
                self.match(MT22Parser.LC)
                self.state = 142
                self.exp(0)
                self.state = 143
                self.match(MT22Parser.RC)
                self.state = 144
                self.closed_stmt()
                self.state = 145
                self.match(MT22Parser.ELSE)
                self.state = 146
                self.closed_stmt()
                pass
            elif token in [MT22Parser.WHILE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.match(MT22Parser.WHILE)
                self.state = 149
                self.match(MT22Parser.LC)
                self.state = 150
                self.exp(0)
                self.state = 151
                self.match(MT22Parser.RC)
                self.state = 152
                self.closed_stmt()
                pass
            elif token in [MT22Parser.FOR]:
                self.enterOuterAlt(localctx, 4)
                self.state = 154
                self.for_closedstmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Basic_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardclr(self):
            return self.getTypedRuleContext(MT22Parser.VardclrContext,0)


        def assnstmt(self):
            return self.getTypedRuleContext(MT22Parser.AssnstmtContext,0)


        def dowhstmt(self):
            return self.getTypedRuleContext(MT22Parser.DowhstmtContext,0)


        def brkstmt(self):
            return self.getTypedRuleContext(MT22Parser.BrkstmtContext,0)


        def contstmt(self):
            return self.getTypedRuleContext(MT22Parser.ContstmtContext,0)


        def rtnstmt(self):
            return self.getTypedRuleContext(MT22Parser.RtnstmtContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(MT22Parser.CallstmtContext,0)


        def blkstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlkstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_basic_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBasic_stmt" ):
                return visitor.visitBasic_stmt(self)
            else:
                return visitor.visitChildren(self)




    def basic_stmt(self):

        localctx = MT22Parser.Basic_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_basic_stmt)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.vardclr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.assnstmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 159
                self.dowhstmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 160
                self.brkstmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 161
                self.contstmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 162
                self.rtnstmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 163
                self.callstmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 164
                self.blkstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ty_peContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(MT22Parser.BOOL, 0)

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def arrtype(self):
            return self.getTypedRuleContext(MT22Parser.ArrtypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_ty_pe

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTy_pe" ):
                return visitor.visitTy_pe(self)
            else:
                return visitor.visitChildren(self)




    def ty_pe(self):

        localctx = MT22Parser.Ty_peContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ty_pe)
        try:
            self.state = 173
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.match(MT22Parser.BOOL)
                pass
            elif token in [MT22Parser.INT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.match(MT22Parser.INT)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 169
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 170
                self.match(MT22Parser.STRING)
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 5)
                self.state = 171
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARR]:
                self.enterOuterAlt(localctx, 6)
                self.state = 172
                self.arrtype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtmtypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(MT22Parser.BOOL, 0)

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atmtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtmtype" ):
                return visitor.visitAtmtype(self)
            else:
                return visitor.visitChildren(self)




    def atmtype(self):

        localctx = MT22Parser.AtmtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_atmtype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOL) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INT) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(MT22Parser.BOOL, 0)

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def arrtype(self):
            return self.getTypedRuleContext(MT22Parser.ArrtypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_functype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctype" ):
                return visitor.visitFunctype(self)
            else:
                return visitor.visitChildren(self)




    def functype(self):
